# scope

./: Cargo.toml  PLAN.md  README.md  run
src/: app.rs  cli.rs  diff.rs  executor.rs  main.rs  tui.rs
