[package]
name = "scope"
version = "0.1.0"
edition = "2024"
description = "A terminal UI replacement for the Linux watch command"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
similar = "2"
ansi-to-tui = "7"
tokio-util = { version = "0.7", features = ["rt"] }
